[#272] Refactor: 그로&착용 아이템 이미지 조회 API S3Util 적용